# ARCHON

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  serve.py
archon_app/: __init__.py  fapi.py
archon_app/models/: __init__.py  events.py  ta_schemas.py  ultimate_schemas.py
archon_app/routes/: __init__.py  backtest.py  hedge_fund_archon.py  llm_candidates.py  logs.py  memory.py  portfolio.py  settings.py  trading_agents.py  ultimate.py
archon_app/services/: __init__.py  ta_service.py
core/: __init__.py  audit_log.py  config.py  llm_discovery.py  llm_key_status.py  ui_secrets.py
core/engines/: __init__.py  backtest_engine.py  hedge_fund_engine.py  trading_agents_engine.py  ultimate_engine.py
core/logs/: __init__.py  log_manager.py
core/memory/: __init__.py  memory_manager.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/layout/: DashboardLayout.tsx  Sidebar.tsx
frontend/src/components/settings/: AdminPanel.tsx  EngineSettingsPanel.tsx  LlmModeSelector.tsx  LlmModelSelect.tsx  LocalPanel.tsx  OnlinePanel.tsx
frontend/src/components/shared/: EngineStatusDot.tsx  EquityChart.tsx  GuruVoteBar.tsx  LlmKeyBanner.tsx  LlmModelSelect.tsx  MetricCard.tsx  PageDoc.tsx  SSEProgress.tsx  SignalBadge.tsx  TickerInput.tsx  VerdictCard.tsx
frontend/src/docs/: pageHelps.ts
frontend/src/hooks/: use-health.ts  use-sse.ts
frontend/src/lib/: api.ts  llmPhase8Adapters.ts
frontend/src/pages/: BacktestPage.tsx  DashboardPage.tsx  HedgeFundPage.tsx  LogsPage.tsx  MemoryPage.tsx  PortfolioPage.tsx  SettingsPage.tsx  TradingAgentsPage.tsx  UltimatePage.tsx
frontend/src/types/: index.ts
scripts/: run.bat  run.sh  run_hedge_fund_subprocess.py  smoke_test.py  test_backend.py  test_engines.py
