[tool.poetry]
name = "archon"
version = "0.1.0"
description = "ARCHON — integrated AI trading system (monorepo)"
authors = ["ARCHON"]
packages = [{ include = "core" }]

[tool.poetry.dependencies]
python = "^3.11"
# Stack aligned with vendored projects; pin ranges may be tightened after integration tests
langchain = "^0.3.7"
langgraph = "^0.4.8"
# prebuilt 1.x pairs with langgraph 0.5+ / 1.x and breaks 0.4.x (missing langgraph._internal)
langgraph-prebuilt = ">=0.2.0,<0.3.0"
langchain-openai = "^0.3.23"
langchain-anthropic = "^0.3.15"
langchain-google-genai = "^2.0.11"
langchain-deepseek = "^0.1.2"
langchain-groq = "^0.2.3"
langchain-ollama = "^0.3.6"
langchain-xai = "^0.2.5"
langchain-gigachat = "^0.3.12"
matplotlib = "^3.9.0"
tabulate = "^0.9.0"
scipy = "^1.11.0"
rich = "^14.0.0"
fastapi = { version = "^0.104.0", extras = ["standard"] }
uvicorn = { version = "^0.30.0", extras = ["standard"] }
pydantic = "^2.4.2"
yfinance = "^0.2.63"
colorama = "^0.4.6"
python-dotenv = "^1.0.0"
questionary = "^2.1.0"
httpx = "^0.27.0"
numpy = "^1.24.0"
pandas = "^2.1.0"
# Vendored TradingAgents runtime deps (import-time)
stockstats = "^0.6.5"
rank-bm25 = "^0.2.2"
redis = "^6.2.0"
backtrader = "^1.9.78"
langchain-experimental = "^0.3.4"
tqdm = "^4.67.0"
typer = "^0.12.0"
parsel = "^1.8.0"
setuptools = ">=80.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
